<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSS</string>
    <string name="rss_label">Label</string>
    <string name="rss_url">RSS Url</string>
    <string name="action_set_url">New Url</string>
    <string name="action_list_url">List Url</string>
    <string name="dialog_set">Set</string>
    <string name="dialog_label">Rss URL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="enter_feed_url">Enter feed URL</string>
    <string name="action_save">Save</string>
    <string name="accept">Accept</string>
    <string name="no_network">There are problems retrieving the new feeds. Check your network status and feed url</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="cache_empty">Rss cache empty, retrieving feeds</string>
    <string name="cursor_empty">Rss is loading..., please waite</string>
    <string name="title_activity_rss_detail">RssDetailActivity</string>
    <string name="title_activity_rss_list">List of RSS</string>
    <string name="action_remove_url">Remove Url</string>
    <string name="action_edit_url">Remove Url</string>
    <string name="title_activity_url_edit">UrlEditActivity</string>
    <string name="action_prefs">Preferences</string>
    <string name="title_activity_pref">PrefActivity</string>

</resources>
