<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="4dp">

    <TextView
        android:id="@+id/textViewRssLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rss_label"
        android:textSize="@dimen/text_size_small"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText_urlTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10">
        
        <requestFocus />
    </EditText> 

    <TextView
        android:id="@+id/textViewRssUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rss_url"
        android:textSize="@dimen/text_size_small"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" >
    </EditText>

    <Button
        android:id="@+id/button_set_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/dialog_set" />

</LinearLayout>
