<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UrlEditActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rss_label" 
        android:textSize="@dimen/text_size_small"/>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textViewTitle"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTitle"
        android:layout_marginTop="5dp"
        android:text="@string/rss_url"
        android:textSize="@dimen/text_size_small" />

    <EditText
        android:id="@+id/editUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewUrl"
        android:ems="10" />

    <Button
        android:id="@+id/buttonEditSet"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUrl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dialog_set" />
    
</RelativeLayout>